[package]
name = "stlview"
version = "0.1.1"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>"]

[dependencies]
starfield-render = { git = "https://github.com/mabruckner/starfield-render.git", rev = "bf207cb" }
stl =  { git = "https://github.com/mabruckner/rust-stl.git", rev = "e9526f3"}
clap = "2.10.2"
nalgebra = "0.8.2"
