[package]
name = "stlview"
version = "0.1.2"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>"]

[features]
default=[]

[dependencies]
starfield-render = { git = "https://github.com/mabruckner/starfield-render.git", rev = "801a47a" }
nom = "3.2"
clap = "2.10.2"
nalgebra = "0.8.2"
termite = { git = "https://github.com/mabruckner/termite.git", version = "0.1.1", optional=true }
